create github pages

--- a/page3.html
+++ b/page3.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section once="" class="cid-qQTyWoHk6Q mbr-reveal" id="footer6-1k">
+<section class="engine"><a href="https://mobirise.ws/n">best website maker app</a></section><section once="" class="cid-qQTyWoHk6Q mbr-reveal" id="footer6-1k">
 
     
 
