create github pages

--- a/page1.html
+++ b/page1.html
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-gallery mbr-slider-carousel cid-qQMGa9f2zu" id="gallery3-y">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="mbr-gallery mbr-slider-carousel cid-qQMGa9f2zu" id="gallery3-y">
 
     
 
