create github pages

--- a/page6.html
+++ b/page6.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">amp template</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
+<section class="engine"><a href="https://mobirise.me/b">how to create a site for free</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
 
     
 
@@ -111,10 +111,13 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to improve your experience. By your continued use of this site you accept such use. ">
+  </body>
 </html>
