--- a/page8.html
+++ b/page8.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/o">one page site templates</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
+<section class="engine"><a href="https://mobirise.me/e">make a site</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
 
     
 
@@ -83,7 +83,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wy+Dr2zF6b8sJBU26Zj9ZjQKNDMTIqr/KhKvCktqWzo2CPFFpjU3nBBecJUR/t/q5RxTE0ByWP0MA737iZKyl3Wnu3pVu2cHadaMMN877eYWYt8qyv17C+b6We+IUQ1B" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4BwKzDDgdYsmuSPzgA14765HNzJXU2ZQ2rghPwBNdpwWmFNoTstNjCWcrdQfU5pq/fR4VxFsk5aoj4Io1afy5FMVYIVl944AkVTAAfG5vOBQn+lqh7SvhJR8DLwQveHp" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -117,11 +117,14 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to improve your experience. By your continued use of this site you accept such use. ">
+  </body>
 </html>
