--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">free website maker</a></section><section class="mbr-section content4 cid-qRv4uXG3b7" id="content4-1u">
+<section class="engine"><a href="https://mobirise.me/p">web templates free download</a></section><section class="mbr-section content4 cid-qRv4uXG3b7" id="content4-1u">
 
     
 
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.com">CONTACT</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-7" href="https://mobirise.com">CONTACT</a></div>
             </div>
         </div>
     </div>
@@ -135,10 +135,13 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to improve your experience. By your continued use of this site you accept such use. ">
+  </body>
 </html>
