--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">site maker</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
+<section class="engine"><a href="https://mobirise.me/b">create a website</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
 
     
 
@@ -83,13 +83,13 @@
     <div class="container">
             <div class="media-container-row" style="width: 70%;">
                 <div class="img-item item1" style="width: 121%;">
-                    <img src="assets/images/sarahtilley-31-689x1000.jpg" alt="" title="">
+                    <img src="assets/images/sarahtilley-31.jpg" alt="" title="">
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1"><strong>GEDICHTEN &amp; GEZICHTEN</strong><strong><br></strong><strong><br></strong>lezing Minima Docta, LUCA School of Arts (A0)<br><br></p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <img src="assets/images/sarahtilley-28-688x973.jpg" alt="" title="">
+                    <img src="assets/images/sarahtilley-28.jpg" alt="" title="">
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1"><strong>
                             GHENT ART BOOK FAIR</strong><br><br>RIOT &amp; 019, LUCA School of Arts (A2)<br><br></p>
@@ -105,10 +105,13 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to improve your experience. By your continued use of this site you accept such use. ">
+  </body>
 </html>
