--- a/page5.html
+++ b/page5.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">how to create a website</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
+<section class="engine"><a href="https://mobirise.me/f">simple site creator</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
 
     
 
@@ -83,13 +83,13 @@
     <div class="container">
             <div class="media-container-row" style="width: 70%;">
                 <div class="img-item item1" style="width: 104%;">
-                    <img src="assets/images/sarahtilley-29-689x1000.jpg" alt="" title="">
+                    <img src="assets/images/sarahtilley-29.jpg" alt="" title="">
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1"><strong>FONT DESIGN</strong><br><strong><br></strong>Alphabet overview, LUCA School of Arts<br><br></p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <img src="assets/images/sarahtilley-30-689x1000.jpg" alt="" title="">
+                    <img src="assets/images/sarahtilley-30.jpg" alt="" title="">
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1"><strong>FONT DESIGN&nbsp;</strong><br><br>Alphabet in use, LUCA School of Arts<br><br></p>
                     </div>
@@ -104,10 +104,13 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to improve your experience. By your continued use of this site you accept such use. ">
+  </body>
 </html>
