--- a/page6.html
+++ b/page6.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
 
     
 
