create github pages

--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/o">one page site templates</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
+<section class="engine"><a href="https://mobirise.me/q">responsive website templates</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
 
     
 
