--- a/page9.html
+++ b/page9.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                        <img src="assets/images/logo21.png" alt="Mobirise" style="height: 3.8rem;">
+                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="index.html#content4-1u"></a></span>
@@ -53,7 +53,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/m">site design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
