--- a/page7.html
+++ b/page7.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="index.html#content4-1u"><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; SARAH TILLEY – GRAPHIC DESIGN STUDENT</p><p><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ONLINE PORTFOLIO</p></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="index.html#content4-1u"><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; SARAH TILLEY – GRAPHIC DESIGN STUDENT</p><p><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ONLINE PORTFOLIO</p></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="mbr-section content4 cid-qRymzex13D" id="content4-26">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section content4 cid-qRymzex13D" id="content4-26">
 
     
 
