--- a/page6.html
+++ b/page6.html
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="index.html#content4-1u"><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; SARAH TILLEY – GRAPHIC DESIGN STUDENT</p><p><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ONLINE PORTFOLIO</p></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="index.html#content4-1u"><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; SARAH TILLEY – GRAPHIC DESIGN STUDENT</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ONLINE PORTFOLIO</p></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
+<section class="engine"><a href="https://mobirise.me/b">how to create a site</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
 
     
 
