create github pages

--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">how to create a website</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
 
     
 
@@ -85,14 +85,14 @@
                 <div class="img-item item1" style="width: 121%;">
                     <img src="assets/images/sarahtilley-31.jpg" alt="" title="">
                     <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-1"><strong>GEDICHTEN &amp; GEZICHTEN</strong><strong><br></strong><strong><br></strong>lezing Minima Docta, LUCA School of Arts (A0)<br><br></p>
+                        <p class="mbr-fonts-style align-center mbr-black display-1"><strong>GEDICHTEN &amp; GEZICHTEN</strong><strong><br></strong><strong><br></strong>Reading Minima Docta, LUCA School of Arts<br>Size: A0<br><br></p>
                     </div>
                 </div>
                 <div class="img-item">
                     <img src="assets/images/sarahtilley-28.jpg" alt="" title="">
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1"><strong>
-                            GHENT ART BOOK FAIR</strong><br><br>RIOT &amp; 019, LUCA School of Arts (A2)<br><br></p>
+                            GHENT ART BOOK FAIR</strong><br><br>RIOT &amp; 019, LUCA School of Arts<br>Size: A2<br><br></p>
                     </div>
                 </div>
             </div>
