create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">build a website for free</a></section><section class="mbr-section content4 cid-qRv4uXG3b7" id="content4-1u">
+<section class="engine"><a href="https://mobirise.me/s">free bootstrap themes</a></section><section class="mbr-section content4 cid-qRv4uXG3b7" id="content4-1u">
 
     
 
@@ -142,6 +142,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page6.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
   </body>
 </html>
