--- a/page8.html
+++ b/page8.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">amp templates</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section content4 cid-qRytHfmrEg" id="content4-2h">
 
     
 
@@ -82,7 +82,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gCkrkSgo7WyqA0J/rFswE14jpOR8H+4TaTsjRAoMJ4Dfi+O57buvuTYr+I5aiej+mSgmwmt8EDE6OTcoAuyvZB47nC3OjF3FMsDw9/iNM5CyrOFclr+koJLqzbbK/ALM" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RziQNIozjaNC7jU0hm5mjKbL+J7eTt+Q57o1AeegEXg02A1Uv5SIW4v8ESPVT8de5W+XyPyzgwAnDtYy2WzXjFITuTIpqdWRi0weVjezBJ4L8JhNcQKr4RYVG+/MMMki" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -124,6 +124,6 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page6.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
   </body>
 </html>
