--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">free site creation software</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section content4 cid-qRv4TJHXhn" id="content4-20">
 
     
 
@@ -112,6 +112,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page6.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
   </body>
 </html>
