create github pages

--- a/page5.html
+++ b/page5.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">site builder</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
+<section class="engine"><a href="https://mobirise.me/c">web builder</a></section><section class="mbr-section content4 cid-qRv4GvbTaf" id="content4-1w">
 
     
 
@@ -111,6 +111,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="This website use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a> for more information.">
   </body>
 </html>
