--- a/page6.html
+++ b/page6.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/v">html templates</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
+<section class="engine"><a href="https://mobirise.me/h">how to create a web page for free</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
 
     
 
@@ -118,6 +118,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="This website use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a> for more information.">
   </body>
 </html>
