--- a/page1.html
+++ b/page1.html
@@ -112,6 +112,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="This website use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a> for more information.">
   </body>
 </html>
