--- a/page7.html
+++ b/page7.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="mbr-section content4 cid-qRymzex13D" id="content4-26">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section content4 cid-qRymzex13D" id="content4-26">
 
     
 
@@ -256,6 +256,6 @@
   <script src="assets/slidervideo/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="This website use cookies to give you the best experience. Read our <a href='page9.html'>cookie policy</a> for more information.">
   </body>
 </html>
