create github pages

--- a/page9.html
+++ b/page9.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop own website</a></section><section class="mbr-section content4 cid-qT3uDwBJgB" id="content4-3l">
+<section class="engine"><a href="https://mobirise.me/n">landing page html templates</a></section><section class="mbr-section content4 cid-qT3uDwBJgB" id="content4-3l">
 
     
 
@@ -100,7 +100,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-1">A cookie is small text and number file that I save in the browser or the hard disk of your computer. This way, I collect statics from the visitors to improve this website. Unless your browser settings are modified and will refuse those cookies, our system will visit cookies from your website.</div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-1">A cookie is small text and number file that I save in the browser or the hard disk of your computer. This way, I collect statics from the visitors to improve this website. Unless your browser settings are modified and will refuse those cookies, this system will visit cookies from your website.</div>
         </div>
     </div>
 </section>
