create github pages

--- a/page6.html
+++ b/page6.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html website templates</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
+<section class="engine"><a href="https://mobirise.me/o">free one page website templates</a></section><section class="mbr-section content4 cid-qRv4BRaruQ" id="content4-1v">
 
     
 
